--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nowifi4u/throttler",
+  "name": "@nw/throttler",
   "version": "0.1.0",
   "description": "Typescript throttle library",
   "main": "src/index.js",
