Revert "wip: change package name"
This reverts commit 1749f3f5adf674031b0cfed75e14f90f943989dd.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nw/throttler",
+  "name": "@nowifi4u/throttler",
   "version": "0.1.0",
   "description": "Typescript throttle library",
   "main": "dist/index.js",
